# pasta

./: .gitignore  Cargo.toml  README.md  pasta.db
.sqlx/: query-68839a18d6e66a49d6bc3d188070a32ca90c3825482851fc184eebdc20964258.json  query-782a0b39f9804ec0b5c9533c9676319e0740b6bb1445dc27e55baf473d9844ff.json  query-96f4f4054b0c6f7bc116f4d976a512ec1e8162db9ead20801dc25f4ad50f74dd.json  query-e190679e5a08c55b0ae16e01f816463fe79842dae95736655f14b1f02d1410d6.json
migrations/: 20240304043256_init.sql
src/: commands.rs  db.rs  main.rs
