[package]
name = "pasta"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.2"
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.1"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
